# blossom_case_study

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
output/: companies.parquet
output/podcast/: all_episodes.parquet  guest_analysis.parquet  high_signal.parquet  researched.parquet
src/: app.py  core.py  cro.py  enrich.py  http.py  main.py  nace.py  research.py  website.py
src/podcast/: README.md  analysis.py  extract.py  feeds.py  research.py  scraper.py
