[project]
name = "blossom-case-study"
version = "0.1.0"
description = "Ireland CRO scraper for Series A investment opportunities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "aiolimiter",
    "diskcache",
    "beautifulsoup4",
    "lxml",
    "polars",
    "streamlit",
    "pydantic",
    "tenacity",
    "playwright",
    "playwright-stealth>=2.0.0",
    "nodriver>=0.48.1",
    "duckduckgo-search>=8.1.1",
    "openai>=2.15.0",
    "feedparser>=6.0.12",
]
